2012-08-21  Julien Chaffraix  <jchaffraix@webkit.org>

        Crash in RenderTableSection::setCellLogicalWidths
        https://bugs.webkit.org/show_bug.cgi?id=94291

        Reviewed by Abhishek Arya.

        * fast/table/crash-split-table-section-no-cell-recalc-expected.txt: Added.
        * fast/table/crash-split-table-section-no-cell-recalc.html: Added.

2012-08-21  Yoshifumi Inoue  <yosin@chromium.org>

        [Forms] multiple fields time input UI should not have two focus ring.
        https://bugs.webkit.org/show_bug.cgi?id=94579

        Reviewed by Hajime Morita.

        This patch adds a test case of focus appearance multiple fields time
        input UI.

        * fast/forms/time-multiple-fields/time-multiple-fields-appearance-basic-expected.html: Added script to make focus appearance.
        * fast/forms/time-multiple-fields/time-multiple-fields-appearance-basic.html: Added script to set focus to input element.

2012-08-21  Adam Barth  <abarth@webkit.org>

        V8 shouldn't have its own way of printing cross-origin error messages
        https://bugs.webkit.org/show_bug.cgi?id=94641

        Reviewed by Eric Seidel.

        Update these results to reflect the new error messages. These error
        messages are both more correct and more like JavaScriptCore.

        * platform/chromium/http/tests/security/cross-frame-access-private-browsing-expected.txt: Added.
            - We don't use the private browsing setting to implement private browsing.
        * platform/chromium/http/tests/security/cross-frame-access-document-direct-expected.txt:
        * platform/chromium/http/tests/security/inactive-document-with-empty-security-origin-expected.txt:
        * platform/chromium/http/tests/security/listener/xss-inactive-closure-expected.txt:
        * platform/chromium/http/tests/security/xss-eval-expected.txt:
            - Previously, we were incorrectly using the first script rather